# wrappers

./: .dockerignore  Cargo.toml  README.md  mkdocs.yaml
.github/workflows/: release.yml  test_khulnasoft_wrappers.yml
docs/: airtable.md  auth0.md  bigquery.md  clickhouse.md  cognito.md  contributing.md  firebase.md  index.md  installation.md  logflare.md  mssql.md  redis.md  s3.md  stripe.md
khulnasoft-wrappers/: Cargo.toml  README.md
khulnasoft-wrappers-macros/: Cargo.toml  README.md
khulnasoft-wrappers-macros/src/: lib.rs
khulnasoft-wrappers/src/: interface.rs  lib.rs  options.rs  utils.rs
wrappers/: Cargo.toml  README.md  wrappers.control
wrappers/.ci/: docker-compose.yaml
wrappers/dockerfiles/firebase/: README.md
wrappers/src/fdw/airtable_fdw/: README.md  airtable_fdw.rs  mod.rs  result.rs
wrappers/src/fdw/auth0_fdw/: README.md  auth0_fdw.rs
wrappers/src/fdw/bigquery_fdw/: README.md  bigquery_fdw.rs  mod.rs
wrappers/src/fdw/clickhouse_fdw/: README.md  clickhouse_fdw.rs  mod.rs  tests.rs
wrappers/src/fdw/cognito_fdw/: README.md  cognito_fdw.rs
wrappers/src/fdw/firebase_fdw/: README.md  firebase_fdw.rs  mod.rs  tests.rs
wrappers/src/fdw/helloworld_fdw/: README.md  helloworld_fdw.rs
wrappers/src/fdw/logflare_fdw/: README.md  logflare_fdw.rs  mod.rs
wrappers/src/fdw/mssql_fdw/: README.md  mod.rs  mssql_fdw.rs  tests.rs
wrappers/src/fdw/redis_fdw/: README.md  mod.rs  redis_fdw.rs
wrappers/src/fdw/s3_fdw/: README.md  mod.rs  parquet.rs  s3_fdw.rs
wrappers/src/fdw/stripe_fdw/: README.md  mod.rs  stripe_fdw.rs
(+6 files in other folders)
